# conjugateGradient

./: .gitignore  .travis.yml  COPYRIGHT  ConjugateGradient.cabal  INSTALL  LICENSE  Makefile  README  README.md  RELEASENOTES  Setup.hs  conjugateGradient.cabal
Math/: ConjugateGradient.hs
