Name:          ConjugateGradient
Version:       1.0
Category:      Math
Synopsis:      Solve sparse matrix systems
Description:   Solve sparse matrix systems
Copyright:     Levent Erkok, 2013
License:       BSD3
License-file:  LICENSE
Stability:     Experimental
Author:        Levent Erkok
Homepage:      http://github.com/LeventErkok/ConjugateGradient
Bug-reports:   http://github.com/LeventErkok/ConjugateGradient/issues
Maintainer:    Levent Erkok (erkokl@gmail.com)
Build-Type:    Simple
Cabal-Version: >= 1.14
Extra-Source-Files: INSTALL, README, COPYRIGHT, RELEASENOTES

source-repository head
    type:       git
    location:   git://github.com/LeventErkok/ConjugateGradient.git

Library
  default-language: Haskell2010
  ghc-options     : -Wall
  Build-Depends   : base >= 4 && < 5, random, containers
  Exposed-modules : Math.ConjugateGradient
